# nakala_haskell

./: CHANGELOG.md  LICENSE  README.md  nakala.cabal
app/: Main.hs
src/: Ast.hs  Interpreter.hs  Parser.hs  Value.hs
